<resources>
    <string name="app_name">Money Manager</string>
    <string name="credit_text">Makes use of MP Chart</string>
    <string name="title_add">Add</string>
    <string name="title_home">Home</string>
    <string name="title_transaction">Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="title_homepage">Home Page</string>
    <string name="title_addpage">Add Page</string>
    <string name="title_transactionpage">Transaction Page</string>
    <string name="title_settingspage">Settings Page</string>
    <string name="hello">Hello</string>
    <string name="Name">Name</string>
    <string name="Summary">Summary</string>
    <string name="spend_sentence">This week you spent.. </string>
    <string name="settings_name"> <u>Settings</u></string>
    <string name="button_name">Save Changes</string>
    <string name="profile_pic">Profile Picture: </string>
    <string name="name_change">Name:</string>
    <string name="your_name"> Your name will be changed to..</string>
    <string name="D_O_B">Date of Birth:</string>
    <string name="Change_Date">Change Date</string>
    <string name="Current_date"> Date Has Not Been Chosen</string>
    <string name ="Change_Picture">Change Picture</string>
    <string name="todo">TODO</string>
</resources>
